--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 
-         LibXen : simple library to use the Xen hypervisor
+         LibVir : simple library to use the Xen hypervisor
 
   As of Wed Nov 2 2005, this is a completely new project, it is not
 usable in any way yet.
