--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Mon Dec  5 19:14:05 CET 2005 Daniel Veillard <veillard@redhat.com>
+
+	* include/libvir.h src/libvir.c src/libvir_sym.version src/virsh.c:
+	  first pass at trying to implement virDomainGetInfo() quite a bit
+	  of work left to do.
+
 Mon Dec  5 12:15:16 CET 2005 Daniel Veillard <veillard@redhat.com>
 
 	* Makefile.am README TODO autogen.sh configure.in libvir.pc.in
