--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Dec  7 14:09:48 CET 2005 Karel Zak <kzak@redhat.com>
+	* include/libvir.h src/libvir.c: adding xenConnectNumOfDomains()
+	  to returns number of active domains.
+
 Wed Dec  7 13:55:04 CET 2005 Daniel Veillard <veillard@redhat.com>
 
 	* docs/ChangeLog.awk docs/ChangeLog.xsl: Changelog handling from
