--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Dec  9 00:02:06 CET 2005 Daniel Veillard <veillard@redhat.com>
+
+	* src/virsh.c: added support for suspend/resume/destroy, validating
+	  the previous code.
+
 Thu Dec  8 18:16:20 CET 2005 Daniel Veillard <veillard@redhat.com>
 
 	* src/libvir.c src/xen_internal.c src/xen_internal.h: implement
