--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Dec  9 11:15:41 CET 2005 Daniel Veillard <veillard@redhat.com>
+
+	* configure.in: adding --without-depends to make dist on non
+	  Xenified machine.
+
 Fri Dec  9 00:47:12 CET 2005 Daniel Veillard <veillard@redhat.com>
 
 	* Makefile.am include/libvir.h.in libvir.pc.in: various fixes.
