--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Dec  9 14:03:13 CET 2005 Daniel Veillard <veillard@redhat.com>
+
+	* docs/*: extended the documentation
+
 Fri Dec  9 11:15:41 CET 2005 Daniel Veillard <veillard@redhat.com>
 
 	* configure.in: adding --without-depends to make dist on non
