--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Dec  9 15:39:18 CET 2005 Daniel Veillard <veillard@redhat.com>
+
+	* docs/search.php docs/index.py docs/*.xsl docs/html/*: fixed the
+	  page generation, added the search engine.
+
 Fri Dec  9 14:03:13 CET 2005 Daniel Veillard <veillard@redhat.com>
 
 	* docs/*: extended the documentation
