--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Dec 14 13:35:39 CET 2005 Daniel Veillard <veillard@redhat.com>
+
+	* src/xml.c: added dump of physical vbd and read-only status
+
 Wed Dec 14 12:20:06 CET 2005 Daniel Veillard <veillard@redhat.com>
 
 	* src/xml.c: started to add block devices and interfaces descriptions
