--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Thu Dec 15 17:56:27 CET 2005 Karel Zak <kzak@redhat.com>
+
+	* src/virsh.c: remove --id / --name options
+	* include/libvir.h: add missing declaration of virDomainGetXMLDesc()
+
+
 Wed Dec 14 16:28:24 CET 2005 Daniel Veillard <veillard@redhat.com>
 
 	* src/xml.c: add dump of os/boot informations
