--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Dec 16 13:59:35 CET 2005 Daniel Veillard <veillard@redhat.com>
+
+	* src/libvir_sym.version: oops forgot to export the new symbol
+
 Fri Dec 16 13:15:04 CET 2005 Daniel Veillard <veillard@redhat.com>
 
 	* include/libvir.h include/libvir.h.in src/internal.h src/libvir.c:
