--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Dec 21 17:58:45 CET 2005 Daniel Veillard <veillard@redhat.com>
+
+	* docs/architecture.* docs/*: added a section on the architecture
+	  and regenerated the docs.
+
 Mon Dec 19 19:04:11 CET 2005 Daniel Veillard <veillard@redhat.com>
 
 	* NEWS docs/libvir.html docs/news.html: preparing 0.0.1 release
