* doc//*: mostly finished the revamp in the plane, starts to look good Daniel

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Jan 21 23:33:46 GMT 2006 Daniel Veillard <veillard@redhat.com>
+
+	* doc//*: mostly finished the revamp in the plane, starts to look good
+
 Fri Jan 20 16:48:05 CET 2006 Daniel Veillard <veillard@redhat.com>
 
 	* doc/* : total revamp of the web site based on Diana Fong design
