--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Jan 22 17:26:20 CET 2006 Daniel Veillard <veillard@redhat.com>
+
+	* doc/*: started to augment and update the documentation
+
 Sat Jan 21 23:33:46 GMT 2006 Daniel Veillard <veillard@redhat.com>
 
 	* doc//*: mostly finished the revamp in the plane, starts to look good
