--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Jan 23 14:23:16 CET 2006 Daniel Veillard <veillard@redhat.com>
+
+	* doc/*: augment and try to complete the doc in its current state
+
 Sun Jan 22 17:26:20 CET 2006 Daniel Veillard <veillard@redhat.com>
 
 	* doc/*: started to augment and update the documentation
