--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+Tue Jan 31 11:22:51 CET 2006 Daniel Veillard <veillard@redhat.com>
+
+	* python/*: update of the python bindings, fix names, add
+	  missing features like list of domains and domain info extraction
+
+Tue Jan 31 11:21:56 CET 2006 Daniel Veillard <veillard@redhat.com>
+
+	* configure.in libvir.spec.in NEWS docs/*: commiting the state of 0.0.2
+	  release
+
 Sun Jan 29 11:55:13 CET 2006 Daniel Veillard <veillard@redhat.com>
 
 	* NEWS docs/news.xsl: added stylesheet to generate NEWS file
