--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Jan 31 19:12:19 CET 2006 Daniel Veillard <veillard@redhat.com>
+
+	* configure.in docs/examples/*: starting to add examples. the XSLT
+	  still need to be fixed for web site
+
 Tue Jan 31 11:22:51 CET 2006 Daniel Veillard <veillard@redhat.com>
 
 	* python/*: update of the python bindings, fix names, add
