--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,8 @@
 
-        NEWS file for libvir
+        NEWS file for libvirt
 
   Note that this is automatically generated from the news webpage at:
-       http://libvir.org/news.html
+       http://libvirt.org/news.html
 
 Releases
 0.0.2: Jan 29 2006:
