--- a/README
+++ b/README
@@ -1,7 +1,13 @@
 
-         LibVir : simple library to use the Xen hypervisor
+         LibVirt : simple API for virtualization
 
-  As of Wed Nov 2 2005, this is a completely new project, it is not
-usable in any way yet.
+  Libvir is a C toolkit to interract with the virtualization capabilities
+of recent versions of Linux (and other OSes). It is free software
+available under the GNU Lesser General Public License. Virtualization of
+the Linux Operating System means the ability to run multiple instances of
+Operating Systems concurently on a single hardware system where the basic
+resources are driven by a Linux instance. The library aim at providing
+long term stable C API initially for the Xen paravirtualization but
+should be able to integrate other virtualization mechanisms if needed.
 
 Daniel Veillard <veillard@redhat.com>
